# itdshot

./: .gitignore  README.md  pyproject.toml
itdshot/: cli.py  main.py  post.html
itdshot/templates/: post.html
